* Fixed a variety of small bugs, parser errors and typos reported through the gdocs form and github. Keep em coming!
* Terry's introduction scenes. I'd suggest you replay the mansion heist to get the most of this (old saves may be slightly weird).

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3i
------------
* Fixed a bug in the Miranda date logic, triggering the wrong ending scene.
* Fixed the problem in Miranda's date where the scene would lock if you already had the Visa from Gwendy.
* Fixed a problem with exploration where the Data button would still show (enabling you to skip out of certain scenes.) Holler if this broke anything.
* Added a talk prompt to Jeanne. She can teach you magic (except that the jobs are not implemented yet).
* Implemented the level 2 magic jobs: Mage, Mystic and Healer. You can get them both through Magnus and Jeanne.
* Implemented Miranda date sex:
 - PC dom, PC fucks vag.
 - PC dom, PC fucks ass. Written together with LD/QB.
 - PC dom, PC anal ride. Written by LD/QB.
* Added a new onetime encounter with a female ferret at the Maidens' Bane tavern. Written by Reaper.
* Added a repeatable sex option to Miranda at the bar. Open after the first date, leads to the same scenes as the dates.

Version 0.3h4
-------------
* Broken Magnus is fixed. Again.
* Fixed a logical inconsistency in the game flow. Gwendy and Maria can no longer be encountered before you've met Miranda for the first time (talked to her at the gates of Rigard for the first time).

Version 0.3h3
-------------
* Broken Magnus is fixed.
* Bug in golem combat fixed.
* Fixed some minor typos/parser errors in Gwendy.

Version 0.3h2
-------------
* Fixed a bug in Magnus where he would show the wrong text when prompted for sex.
* Added stretching your capacity to Magnus' scenes. Quite a lot.
* Fixed a bug I introduced in the Gwendy loss prompt.