@@ -114,6 +114,7 @@
 		<script type="text/javascript" src="js/loc/rigard/plaza.js"></script>
 		<script type="text/javascript" src="js/loc/rigard/slums.js"></script>
 		<script type="text/javascript" src="js/loc/rigard/tavern.js"></script>
+		<script type="text/javascript" src="js/loc/rigard/brothel.js"></script>
 		<script type="text/javascript" src="js/loc/rigard/krawitz.js"></script>
 		<script type="text/javascript" src="js/loc/rigard/castle.js"></script>
 		<script type="text/javascript" src="js/loc/rigard/clothstore.js"></script>
