@@ -14,6 +14,7 @@ Version 0.3j
 * Removed the font outline for buttons. Let me know if this makes the text more or less readable, and what browser you use (should fix some rendering issues in chrome).
 * Fixed a variety of small bugs, parser errors and typos reported through the gdocs form and github. Keep em coming!
 * Terry's introduction scenes. I'd suggest you replay the mansion heist to get the most of this (old saves may be slightly weird).
+* Rigard brothel is now... there. Not quite open for business yet.
 
 --------------------------------------------
              PREVIOUS VERSIONS
